--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "multiverse-market"
 version = "0.1.0"
 description = "A marketplace system for trading across multiple universes"
-requires-python = ">=3.8"
+requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.14.1",
     "asyncpg>=0.30.0",
@@ -12,9 +12,9 @@ dependencies = [
     "pydantic-settings>=2.7.1",
     "python-dotenv>=1.0.1",
     "redis>=5.2.1",
-    "sqlalchemy>=2.0.37",
-    "typer[all]>=0.15.1",
-    "uvicorn[standard]>=0.33.0",
+    "sqlalchemy>=2.0.38",
+    "typer>=0.15.1",
+    "uvicorn[standard]>=0.34.0",
 ]
 
 [project.scripts]
@@ -22,15 +22,15 @@ multiverse-market = "multiverse_market.cli:app"
 
 [project.optional-dependencies]
 test = [
-    "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0",
+    "pytest>=8.0.2",
+    "pytest-asyncio>=0.23.5",
     "pytest-cov>=4.1.0",
-    "locust>=2.24.0",
-    "httpx>=0.27.0",
+    "locust>=2.32.8",
+    "httpx>=0.28.1",
 ]
 dev = [
-    "pyright>=1.1.350",
-    "ruff>=0.2.0",
+    "pyright>=1.1.352",
+    "ruff>=0.3.2",
 ]
 
 [build-system]
