refactor(cache): move cache service to infrastructure layer
- Move RedisCache from services to infrastructure layer for better separation of concerns

- Add transaction mark to pytest.ini to fix unknown mark warning

- Update imports in dependencies.py to reflect new cache location

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,4 +6,5 @@ markers =
     purchase: Tests related to item purchase functionality
     user: Tests related to user operations
     item: Tests related to item operations
-    cache: Tests related to caching functionality 
+    cache: Tests related to caching functionality
+    transaction: Tests related to transaction operations 
