--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ test = [
     "pytest-asyncio>=0.23.5",
     "pytest-cov>=4.1.0",
     "locust>=2.32.8",
-    "httpx>=0.28.1",
+    "httpx>=0.27.0",
+    "aiosqlite>=0.20.0",
 ]
 dev = [
     "pyright>=1.1.352",
