--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ target-version = "py312"
 [tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
+    "F",   # pyflakes
     "I",   # isort
     "N",   # pep8-naming
     "UP",  # pyupgrade
