--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,7 +39,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/multiverse_market"]
+packages = ["src/multiverse_market", "tests"]
 
 [tool.ruff]
 line-length = 100
